--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "deploy": "npm run build && gh-pages -d dist"
     },
     "devDependencies": {
+        "@types/node": "^18.11.18",
         "typescript": "^4.5.4",
         "vite": "^2.9.0"
     },
